# genai-skills-workshop-akashp

challenge 1/: I dont like food.ipynb
challenge 2/: Programming a RAG.ipynb
challenge 3/: Testing and evaluation.ipynb
challenge 4/: exported_playbook_aurora-bay-faqs-playbook.json
challenge 5/: Dockerfile  README.md  backend.py  frontend.py  pyproject.toml  settings.yaml  supervisord.conf
challenge 5/tests/: test_chat.py
