[project]
name = "c5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-aiplatform>=1.97.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-genai==1.5.0",
    "gradio==5.20.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pytest>=8.4.0",
    "pyyaml==6.0.2",
    "scikit-learn>=1.7.0",
]